# mataroa

./: .envrc.example  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: django-build.yml  push-docker-image.yml
ansible/: .envrc.example  mataroa.service.j2  vars.yaml
docs/src/: dependencies.md  file-structure-walkthrough.md
export_base_hugo/: 404.html  baseof.html  config.toml  index.html  list.html  single.html
main/: admin.py  denylist.py  feeds.py  forms.py  middleware.py  models.py  urls.py  util.py
main/fixtures/: dev-data.json
main/management/commands/: mailexports.py  processnotifications.py  testbulkmail.py
main/migrations/: 0104_remove_user_theme_sansserif_and_more.py  0105_remove_user_comments_on_delete_comment.py  0106_alter_user_custom_domain.py  0107_remove_user_monero_address.py  0108_delete_onboard.py  0109_remove_user_stripe_customer_id_and_more.py  0110_alter_user_footer_note.py  0111_user_markdown_link_paste_on.py  0112_alter_user_notifications_on.py  0113_analyticpage_referer_analyticpost_referer.py  0114_remove_analyticpage_referer_and_more.py
main/templates/assets/: highlight.css  paste-link.js  save-draft.js  style.css
main/templates/main/: adminextra_user_list.html  adminextra_user_single.html  analytic_detail.html  analytic_list.html  billing_index.html  (+15 more)
main/tests/: test_analytics.py  test_blog.py  test_feeds.py  test_images.py  test_management.py  test_static.py  test_users.py
main/views/: billing.py  export.py  general.py
mataroa/: settings.py
(+1 files in other folders)
