[project]
name = "mataroa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "bleach[css]==6.2.0",
    "django==5.2.4",
    "gunicorn==23.0.0",
    "marko[codehilite]==2.1.4",
    "packaging==24.1",
    "psycopg2-binary>=2.9.10",
    "pygments==2.19.2",
    "python-frontmatter==1.1.0",
    "pyyaml==6.0.2",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tinycss2==1.4.0",
    "webencodings==0.5.1",
]

[dependency-groups]
dev = [
    "coverage==7.5.4",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff==0.12.11",
]
